add barcode and request
