# be/api/handler/asset_log_handler.go
@@ -2,8 +2,10 @@ package handler
 
 import (
 	"BE_Manage_device/constant"
+	"BE_Manage_device/internal/domain/filter"
 	"BE_Manage_device/internal/domain/service"
 	"BE_Manage_device/pkg"
+	"BE_Manage_device/pkg/utils"
 	"net/http"
 	"strconv"
 
@@ -26,16 +28,28 @@ func NewAssetLogHandler(service *service.AssetLogService) *AssetLogHandler {
 // @Accept json
 // @Produce json
 // @Param		asset_id	path		string				true	"id"
+// @Param        asset   query    filter.AssetFilter   false  "filter asset"
+// @param Authorization header string true "Authorization"
 // @Router /api/assets-log/{asset_id} [GET]
+// @securityDefinitions.apiKey token
+// @in header
+// @name Authorization
+// @Security JWT
 func (h *AssetLogHandler) GetLogByAssetId(c *gin.Context) {
-	id := c.Param("id")
 	defer pkg.PanicHandler(c)
+	userId := utils.GetUserIdFromContext(c)
+	id := c.Param("id")
 	assetId, err := strconv.ParseInt(id, 10, 64)
 	if err != nil {
 		log.Error("Happened error when get id via path. Error", err)
 		pkg.PanicExeption(constant.UnknownError, "Happened error when get id via path")
 	}
-	assetLogs, err := h.service.GetLogByAssetId(assetId)
+	var filter filter.AssetLogFilter
+	if err := c.ShouldBindQuery(&filter); err != nil {
+		log.Error("Happened error when mapping query to filter. Error", err)
+		pkg.PanicExeption(constant.InvalidRequest, "Happened error when mapping query to filter")
+	}
+	assetLogs, err := h.service.Filter(userId, assetId, filter.Action, filter.StartTime, filter.EndTime, filter.Page, filter.Limit)
 	if err != nil {
 		log.Error("Happened error when get asset log. Error", err)
 		pkg.PanicExeption(constant.UnknownError, "Happened error when get asset log")
