# be/api/router.go
@@ -9,7 +9,7 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func SetupRoutes(r *gin.Engine, userHandler *handler.UserHandler, LocationHandler *handler.LocationHandler, CategoriesHandler *handler.CategoriesHandler, DepartmentsHandler *handler.DepartmentsHandler, AssetsHandler *handler.AssetsHandler, RoleHandler *handler.RoleHandler, AssignmentHandler *handler.AssignmentHandler, AssetLogHandler *handler.AssetLogHandler, session repository.UsersSessionRepository) {
+func SetupRoutes(r *gin.Engine, userHandler *handler.UserHandler, LocationHandler *handler.LocationHandler, CategoriesHandler *handler.CategoriesHandler, DepartmentsHandler *handler.DepartmentsHandler, AssetsHandler *handler.AssetsHandler, RoleHandler *handler.RoleHandler, AssignmentHandler *handler.AssignmentHandler, AssetLogHandler *handler.AssetLogHandler, RequestTransferHandler *handler.RequestTransferHandler, session repository.UsersSessionRepository) {
 	//users
 	r.Use(middleware.CORSMiddleware())
 	api := r.Group("/api")
@@ -54,11 +54,14 @@ func SetupRoutes(r *gin.Engine, userHandler *handler.UserHandler, LocationHandle
 	//Roles
 	api.GET("/roles", RoleHandler.GetAllRole)
 
-	//assignment
+	//Assignment
 	api.POST("/assignment", AssignmentHandler.Create)
 	api.PUT("/assignment/:id", AssignmentHandler.Update)
 	api.GET("/assignment/filter", AssignmentHandler.FilterAsset)
 
 	//AssetsLog
 	api.GET("/assets-log/{id}", AssetLogHandler.GetLogByAssetId)
+
+	//Request
+	api.POST("/request-transfer/:id", RequestTransferHandler.Create)
 }
