# be/internal/domain/repository/request_transfer_repository.go
@@ -1,0 +1,7 @@
+package repository
+
+import "BE_Manage_device/internal/domain/entity"
+
+type RequestTransferRepository interface {
+	Create(*entity.RequestTransfer) (*entity.RequestTransfer, error)
+}
